--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="mainContainer">
-  <h1>LOGIN</h1>
+  <h1>LOGIN </h1>
   <form
     action=""
     method="POST"
@@ -28,7 +28,7 @@
         class="alert alert-danger err-msg"
         *ngIf="loginForm.controls['email'].errors?.['required']"
       >
-        Email is required.
+        Email obligatoire.
       </div>
     </div>
     <div class="center">
