--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -61,7 +61,7 @@
       <!-- <button (click)="onSubmit()">Login</button> -->
     </div>
     <div class="center">
-      <a class="nav-link" href="#register" routerLink="/register">Register</a>
+      <a class="nav-link" href="#register" routerLink="/register">se connecter</a>
     </div>
     <div class="form-group">
       <div class="alert alert-danger" role="alert" *ngIf="isLoginFailed">
